--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -26,34 +26,70 @@ html {
     }
 }
 
+@keyframes changeColor {
+    from {
+        color: var(--text-color);
+    }
+    to {
+        color: var(--item-lv2-color);
+    }
+}
+
 /* GRID */
 .grid {
     max-width: 1200px;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    padding: 0 15px;
 }
 
 .grid__row {
     display: flex;
     padding: 0 15px;
     margin: 0 -30px;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 
 /* RESPONSIVE */
 
-@media only screen {
-    .brand-logo {
-        /* background-color: green; */
+@media only screen and (max-width: 900px) {
+    .footer-container {
+        width: 100%;
+        padding: 0 15px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .col-sm-12 {
+        width: 100%;
+        padding: 0 15px;
+    }
+
+    .col-sm-6 {
+        width: 50%;
+        padding: 0 15px;
+    }
+
+    .col-sm-4 {
+        width: calc(100% / 3);
+        padding: 0 15px;
+    }
+
+    .col-sm-3 {
+        width: 25%;
+        padding: 0 15px;
+    }
+
+    .contact {
+        text-align: center;
     }
 }
 
 @media only screen and (min-width: 901px) {
     .brand-logo {
-        /* background-color: brown; */
     }
 
     .col-lg-12 {
@@ -70,4 +106,10 @@ html {
         width: 20%;
         padding: 0 15px;
     }
-}
+
+    /* .col-lg-3 {
+        width: 25%;
+        padding: 0 15px;
+    }
+} */
+
