--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,8 @@
 .nav-item-lv1:hover {
     color: var(--item-lv2-color);
     cursor: pointer;
+    animation: changeColor ease-in 0.2s;
+
 }
 
 .options div i {
@@ -47,7 +49,7 @@
     left: 0;
     list-style: none;
     display: none;
-    /* display: block; */
+    border: none;
     animation: fadeIn ease-in 0.2s;
 }
 
@@ -64,6 +66,7 @@
     border: 1px solid var(--border-color);
     color: var(--text-color);
     font-weight: 400;
+    background-color: var(--white-color);
 }
 
 .nav-item-lv2:hover {
@@ -88,7 +91,6 @@
     width: 280px;
     top: 100%;
     right: 0;
-    /* display: flex; */
     display: none;
     align-items: center;
     padding: 0 8px;
@@ -165,6 +167,7 @@
     position: relative;
     width: 230px;
     text-align: center;
+    font-size: 36px;
     margin-top: 55px;
     padding-bottom: 14px;
     margin-left: 50%;
@@ -173,6 +176,7 @@
 
 .products-heading:hover {
     color: var(--item-lv2-color);
+    animation: changeColor ease-in 0.2s;
     cursor: pointer;
 }
 
@@ -188,7 +192,29 @@
 }
 
 .products-list {
+    position: relative;
     width: 100%;
+    /* max-width: 1200px; */
+    display: flex;
+    /* justify-content: center; */
+}
+
+#prevBtn {
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 0px;
+    z-index: 10;
+    /* background-color: transparent; */
+    
+} 
+
+#nextBtn {
+    top: 50%;
+    border: none;
+    position: absolute;
+    right: 0px;
+    z-index: 10;
 }
 
 .btn {
@@ -196,18 +222,72 @@
     font-size: 25px;
 }
 
+.products-list-items {
+    width: 1200px;
+}
+
+.item-img {
+    width: 100%;
+}
+
+
+.list-item-detail {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.list-item-name {
+    margin-bottom: 15px;
+}
+
+.list-item-price {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+
+/* SLIDER */
+.container {
+    width: 4500px;
+    padding: 0 15px;
+    margin: auto;
+    overflow: hidden;
+
+}
+
+.slide {
+    display: flex;
+    padding: 0 15px;
+    margin: 0 -30px;
+}
+
+.image {
+    width: 100%;
+    padding: 0 15px;
+}
+
+.check {
+    position: relative;
+    width: 1200px;
+    margin: auto;
+    overflow: hidden;
+    margin-top: 20px;
+}
+
+
 /* CATEGORY */
 .category {
     border-top: 1px solid var(--border-color);
     border-bottom: 1px solid var(--border-color);
     padding-top: 28px;
     padding-bottom: 24px;
+    margin-top: 30px;
 }
 
 .category-heading {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    font-size: 28px;
 }
 
 .list {
@@ -222,14 +302,15 @@
 
 /* FOOTER */
 footer {
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 35px;
 }
 
 .footer-heading {
     font-size: 14px;
-    font-weight: 600;
-    margin-bottom: 20px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    margin-top: 30px;
 }
 
 .footer-list {
@@ -238,9 +319,21 @@ footer {
     font-size: 14px;
 }
 
-.footer-list a {
+.footer-item {
     text-decoration: none;
     color: var(--text-color);
     padding: 8px 0;
-    font-weight: 500;
+    font-weight: 400;
 }
+
+.footer-item:hover {
+    color: var(--item-lv2-color);
+    animation: changeColor ease-in 0.2s;
+}
+
+.footer-icon {
+    padding-right: 20px;
+    color: var(--text-color);
+}
+
+
