--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -16,10 +16,16 @@ html {
     color: var(--text-color);
 }
 
+.clearfix::after {
+    content: " ";
+    display: table;
+    clear: both;
+}
+
 /* ANIMATION */
 @keyframes fadeIn {
     from {
-        opacity: 0.5;
+        opacity: 0.8;
     }
     to {
         opacity: 1;
@@ -29,15 +35,25 @@ html {
 .open {
     transform: scale(1, 1);
     transform-origin: top;
-    transition: all .3s;
-    height: 300px;
+    transition: all .1s;
+    /* height: 300px; */
+    min-height: 300px;
 }
 
-.close {
+/* .close {
     transform: scale(1, 0);
     transform-origin: top;
     transition: all .3s;
     height: 0px;
+} */
+
+@keyframes changeColor {
+    from {
+        color: var(--text-color);
+    }
+    to {
+        color: var(--item-lv2-color);
+    }
 }
 
 /* GRID */
@@ -53,15 +69,19 @@ html {
     display: flex;
     padding: 0 15px;
     margin: 0 -30px;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 
 
-/* RESPONSIVE */
+/* ---------------- RESPONSIVE ------------------------ */
 
 @media only screen and (max-width: 900px) {
+    body {
+        overflow-x: hidden;
+    }
+
     .brand-logo {
         border: none !important;
     }
@@ -78,23 +98,51 @@ html {
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 30px;
+        font-size: 25px;
         border: none;
         background-color: transparent;
     }
-
-    .nav-bar-container {
-        align-items: flex-start;
-    }
     
     .options {
-        flex-direction: column;
-        display: none;
-        display: flex;
+        display: block;
     }
 
     .nav-item-lv1 {
         border-bottom: 1px solid var(--border-color);
+    }
+
+    .nav-item-lv1 span {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .btn-lv1 {
+        width: 100px;
+        font-size: 16px;
+        text-align: right;
+    }
+    
+    .show-nav-item {
+        transform: scale(1, 1);
+        transform-origin: top;
+        transition: all .3s;
+        /* height: 300px; */
+    }
+
+    .products-heading {
+        font-size: 24px;
+    }
+
+    .nav-item-lv2 {
+        width: 100%;
+    }
+    
+    .footer-container {
+        width: 100%;
+        padding: 0 15px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
     .col-sm-12 {
@@ -104,7 +152,33 @@ html {
     
     .cart, .search {
         transform: translateY(-100%);
-        font-size: 20px;
+        font-size: 16px;
+    }
+
+    .col-sm-6 {
+        width: 50%;
+        padding: 0 15px;
+    }
+
+    .col-sm-4 {
+        width: calc(100% / 3);
+        padding: 0 15px;
+    }
+
+    .col-sm-3 {
+        width: 25%;
+        padding: 0 15px;
+    }
+
+    .contact {
+        text-align: center;
+    }
+
+    .close {
+        transform: scale(1, 0);
+        transform-origin: top;
+        transition: all .2s;
+        height: 0px;
     }
 }
 
@@ -114,8 +188,43 @@ html {
         display: none;
     }
 
+    .dropdown-menu {
+        position: absolute;
+        z-index: 10;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+        /* ; */
+    }
+
+    .nav-item-lv1::after {
+        content: "";
+        border-width: 10px 10px;
+        border-color: transparent;
+        border-style: solid;
+        position: relative;
+        right: 10px;
+    }
+
     .options {
         display: flex;
+        /* height: 50px !important; */
+    }
+
+    .nav-item-lv1:hover .btn-lv1,
+    .nav-item-lv1:hover {
+        cursor: pointer;
+        color: var(--item-lv2-color);
+        animation: changeColor ease-in 0.2s;
+    }
+
+    .nav-item-lv1:hover .dropdown-menu {
+        transform: scale(1, 1);
+        transform-origin: top;
+        transition: all .2s;
+    }
+
+    .nav-item-lv2:hover {
+        background-color: var(--item-lv2-color);
+        color: white;
     }
 
     .col-lg-12 {
@@ -132,4 +241,7 @@ html {
         width: 20%;
         padding: 0 15px;
     }
-}
+
+    
+} 
+
