--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -77,6 +77,27 @@ html {
 
 /* ---------------- RESPONSIVE ------------------------ */
 
+@media only screen and (max-width: 600px) {
+    .body {
+        overflow-x: hidden;
+    }
+
+    .container {
+        /* width: 4500px; */
+        width: calc(90vw * 7.5);
+        /* max-width: 4500px;
+        padding: 0 15px;
+        margin: auto;
+        overflow: hidden; */
+    
+    }
+
+    .product-overlay {
+        display: none !important;
+    }
+
+}
+
 @media only screen and (max-width: 900px) {
     body {
         overflow-x: hidden;
@@ -141,8 +162,8 @@ html {
     .footer-container {
         width: 100%;
         padding: 0 15px;
-        margin-left: 30px;
-        margin-right: 30px;
+        /* margin-left: 30px; */
+        /* margin-right: 30px; */
     }
 
     .col-sm-12 {
